# noether

noether_examples/src/: mesh_segmenter_client.cpp
noether_msgs/: CMakeLists.txt  package.xml
noether_msgs/msg/: MsgWithBoolArray.msg
noether_msgs/srv/: SrvWithBoolArray.srv
noether_tpp/: package.xml
