<?xml version="1.0"?>
<package format="3">
  <name>noether_msgs</name>
  <version>0.0.0</version>
  <description>The ROS2 port of noether_msgs package</description>
  <maintainer email="jorge.nicho@swri.org">Jorge Nicho</maintainer>  
  <author email="jorge.nicho@swri.org">Jorge Nicho</author>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>action_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
